--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,20 @@
   </head>
 
   <body>
-    
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
   </body>
 </html>
+
+
+
+
+ <%# put in body %>
+<% if current_user %>
+<%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
+<% else %>
+<%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin' %>
+<% end %>
