--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,5 @@
 <% if current_user %>
 <%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
 <% else %>
-<%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin' %>
+<%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
 <% end %>
