--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,11 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <% if current_user %>
+    <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, method: :delete%>
+    <% else %>
+    <%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
-
-
-
-
- <%# put in body %>
-<% if current_user %>
-<%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
-<% else %>
-<%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Sign in", new_user_session_path %>
-<% end %>
